--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "mkdir -p out && [ ! -s ./resources/cache.json ] && echo '{}' > ./resources/cache.json"
   },
   "author": "",
   "license": "ISC",
