--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "mkdir -p out && [ ! -s ./resources/cache.json ] && echo '{}' > ./resources/cache.json"
+    "preinstall": "mkdir -p out && mkdir -p resources && [ ! -s ./resources/cache.json ] && echo '{}' > ./resources/cache.json || true && [ ! -s ./resources/files_done.json ] && echo '{}' > ./resources/files_done.json || true && [ ! -s ./resources/files_failed.json ] && echo '{}' > ./resources/files_failed.json || true"
   },
   "author": "",
   "license": "ISC",
