--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,10 @@
         "global-require": 0,
         "no-unused-expressions": 0,
         "implicit-arrow-linebreak": 0,
-        "max-len": ["error", { "code": 140 }]
+        "max-len": ["error", { "code": 140 }],
+        "no-await-in-loop": 0,
+        "no-restricted-syntax": 0,
+        "no-extend-native": 0
     },
     "env": {
         "node": true,
