--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reddit-save-export",
+  "name": "reddit-saved-sync",
   "version": "1.0.0",
   "description": "Downloads the media of your saved reddit posts locally.",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "test": "mocha --recursive",
     "lint": "eslint . --fix",
     "preinstall": "mkdir -p out && mkdir -p resources && [ ! -s ./resources/cache.json ] && printf '{}' > ./resources/cache.json || true && [ ! -s ./resources/files_done.json ] && printf '{}' > ./resources/files_done.json || true && [ ! -s ./resources/files_failed.json ] && printf '{}' > ./resources/files_failed.json || true && [ ! -s ./.env ] && printf 'userAgent=\nclientId=\nclientSecret=\nusername=\npassword=' > ./.env || true",
-    "postinstall": "gallery-dl > /dev/null || echo 'gallery-dl not installed'"
+    "postinstall": "gallery-dl --version || echo 'gallery-dl not installed'"
   },
   "engines": {
     "node": ">16.0.0"
@@ -27,5 +27,6 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "mocha": "^9.2.2"
-  }
+  },
+  "bin" : { "reddit-saved-sync" : "./index.js" }
 }
