--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "repository": "github:HBir/Reddit-saved-export",
   "dependencies": {
+    "commander": "^9.1.0",
     "dotenv": "^16.0.0",
     "snoowrap": "^1.23.0",
     "youtube-dl-exec": "^2.0.7"
@@ -28,5 +29,7 @@
     "eslint-plugin-import": "^2.25.4",
     "mocha": "^9.2.2"
   },
-  "bin" : { "reddit-saved-sync" : "./index.js" }
+  "bin": {
+    "reddit": "index.js"
+  }
 }
