--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "commander": "^9.1.0",
     "dotenv": "^16.0.0",
+    "image-extensions": "^1.1.0",
     "snoowrap": "^1.23.0",
+    "video-extensions": "^1.2.0",
     "youtube-dl-exec": "^2.0.7"
   },
   "devDependencies": {
